matching is working

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node cipher.js",
-    "dev": "nodemon cipher.js"
+    "start": "node lotto.js",
+    "dev": "nodemon lotto.js"
   },
   "keywords": [],
   "author": "",
